--- a/index.html
+++ b/index.html
@@ -6,9 +6,37 @@
         <title>Home Page</title>
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+<!-- Focus on your business section -->
+
+<div class="focus-container">
+    <div class="focuscard">
+    <div class="focustext">
+        <h1>Focus on</h1>
+        <h1>Your Business</h1>
+        <h5>Let Us Handle Everything Else</h5>
+        <p>Subscription Billing, powered with revenue retention tools and a
+            seamless customer exerience - Without the technical hurdles.</p>
+        <div class="focustextbuttons">
+            <button id="focussignup">Sign Up Free</button>
+            <button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button>
+        </div>
+    </div>
+    <div class="focusgrid">
+        <!-- using placheholder for now. plan to flush out later -->
+        <img src="./images/Header-Side.png" alt="" id="focusgridimg">
+    </div>
+
+</div>
+</div>
+
+
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
     </body>
 </html>
