More content added, formatting

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             <button id="focussignup">Sign Up Free</button>
             <button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button>
         </div>
+        <p>Already using <b>Double</b>Tap? <b>Sign In</b></p>
+        <div class="focusdetails">
+            <p>Free 14 day trial</p>
+            <div class="circle"></div>
+            <p>Manage Customers in Minutes</p>
+            <div class="circle"></div>
+            <p>Cancel at Anytime</p>
+        </div>
+        
     </div>
     <div class="focusgrid">
         <!-- using placheholder for now. plan to flush out later -->
