--- a/index.html
+++ b/index.html
@@ -8,11 +8,46 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
+        <body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <nav class="navbar">
+            <img src="./Logo.png" alt="Logo" class="logo">
+            <div class="links">
+                <a href="./index.html" target="Home">Home</a>
+                <a href="about:blank" target="features">Features</a>
+                <a href="about:blank" target="pricing">Pricing</a>
+                <a href="./extra_pages/how_it_works.html" target="how it works">How it Works</a>
+                <a href="about:blank" target="support">Support</a>
+            </div>
+            <div>
+                <button>Sign in</button>
+                <button>Try it Free</button>
+            </div>
+        </nav>
     </body>
+    <div class="footer">
+        <div>
+            <h2>Try Double Tap Today!</h2>
+        </div>
+        <div>
+            <h4>Let's get started</h4>
+        </div>
+        <div>
+            placeholder for "Getsarted"
+            placeholder for "Chat with us"
+        </div>
+        <div>
+            <a href="about:blank" target="_blank">Free 14 day trial</a>
+            <span class="separator">|</span>
+            <a href="about:blank" target="_blank">Manage Customers in Minutes</a>
+            <span class="separator">|</span>
+            <a href="about:blank" target="_blank">Cancel at anytime</a>
+        </div>
+    </div>
+
+
 </html>
 
-<!--Blue Colors for the landing page:
+<!-- Blue Colors for the landing page:
     Hex: 224FEF
     Rgb (34, 79, 239) -->
