--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
         <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <nav class="navbar">
             <img src="./Logo.png" alt="Logo" class="logo">
             <div class="links">
@@ -20,11 +20,12 @@
                 <a href="about:blank" target="support">Support</a>
             </div>
             <div>
-                <button>Sign in</button>
-                <button>Try it Free</button>
+                <button type="Signin">Sign In</button>
+                <button type="Try_it_free">Try it Free</button>
             </div>
         </nav>
     </body>
+    
     <div class="footer">
         <div>
             <h2>Try Double Tap Today!</h2>
@@ -47,7 +48,3 @@
 
 
 </html>
-
-<!-- Blue Colors for the landing page:
-    Hex: 224FEF
-    Rgb (34, 79, 239) -->
