added navbar & footer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <a href="about:blank" target="support">Support</a>
             </div>
             <div>
-                <button type="Signin">Sign In</button>
-                <button type="Try_it_free">Try it Free</button>
+                <button class="signin-btn" type="Sign_in">Sign In</button>                     <button class="free-btn" type="Try_it_free">Try it Free</button>                
             </div>
         </nav>
     </body>
