Focus grid created and styled

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Subscription Billing, powered with revenue retention tools and a
             seamless customer exerience - Without the technical hurdles.</p>
         <div class="focustextbuttons">
-            <button id="focussignup">Sign Up Free</button>
+            <button id="focussignup">Sign Up Free  >></button>
             <button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button>
         </div>
         <p>Already using <b>Double</b>Tap? <b>Sign In</b></p>
@@ -35,9 +35,24 @@
         </div>
         
     </div>
-    <div class="focusgrid">
+    <div class="container focusgrid">
+        <div class="row ">
+            <div class="col grid-a"><i class="bi bi-grid-1x2-fill"></i><p>Client Dashboard</p></div>
+            <div class="col  grid-b"><i class="bi bi-person"></i><p>Employee Profiles</p></div>
+            <div class="col grid-c"><i class="bi bi-calendar-check"></i><p>Client Calendars</p></div>
+        </div>
+        <div class="row">
+            <div class="col grid-d"><i class="bi bi-bar-chart-line-fill"></i><p>Analytics</p></div>
+            <div class="col grid-e"><i class="bi bi-chat-fill"></i><p>Project Comments</p></div>
+            <div class="col grid-f"><i class="bi bi-folder2"></i><p>Project Folders</p></div>
+        </div>
+        <div class="row">
+            <div class="col grid-g"><i class="bi bi-clock"></i><p>Time Tracking</p></div>
+            <div class="col grid-h"><i class="bi bi-envelope"></i><p>Email</p></div>
+            <div class="col grid-i"><i class="bi bi-bell-fill"></i><p>Project Alerts</p></div>
+        </div>
         <!-- using placheholder for now. plan to flush out later -->
-        <img src="./images/Header-Side.png" alt="" id="focusgridimg">
+        <!-- <img src="./images/Header-Side.png" alt="" id="focusgridimg"> -->
     </div>
 
 </div>
