More focus grid created and styled

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Your Business</h1>
         <h5>Let Us Handle Everything Else</h5>
         <p>Subscription Billing, powered with revenue retention tools and a
-            seamless customer exerience - Without the technical hurdles.</p>
+            seamless customer exerience - without the technical hurdles.</p>
         <div class="focustextbuttons">
             <button id="focussignup">Sign Up Free  >></button>
             <button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button>
@@ -38,7 +38,7 @@
     <div class="container focusgrid">
         <div class="row ">
             <div class="col grid-a"><i class="bi bi-grid-1x2-fill"></i><p>Client Dashboard</p></div>
-            <div class="col  grid-b"><i class="bi bi-person"></i><p>Employee Profiles</p></div>
+            <div class="col grid-b"><i class="bi bi-person"></i><p>Employee Profiles</p></div>
             <div class="col grid-c"><i class="bi bi-calendar-check"></i><p>Client Calendars</p></div>
         </div>
         <div class="row">
