--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-3 mb-4 d-flex justify-content-center">
+                <div class="col-12 mt-3 mb-5 d-flex justify-content-center">
                     <div class="w-75 h-1 border-top border-secondary"></div>
                 </div>
                 <div class="col-12 mb-2">
@@ -52,7 +52,30 @@
             </div>    
         </div>
         <div class="container">
-            
+            <div class="row">
+                <div class="col-12">
+                    <div class="card mb-3 " id="credit_cont">
+                        <div class="row g-0">
+                          <div class="col-md-4 credit_card_right d-flex align-items-center justify-content-center">
+                            <div class="credit_img_cont"><img src="/img/credit-card-picture.png" class="img-fluid rounded-start" alt="..."></div>
+                          </div>
+                          <div class="col-md-8" id="credit_card_right">
+                            <div class="card-body">
+                              <h5 class="card-title fs-3 top_right_cr pb-4">Start accepting payments with Ease</h5>
+                              <p class="card-text fs-6 pb-3 middle_right_cr">Deliver the world of payment options and seamless checkout experiences, making it easy for your customers to pay you for your products and services.</p>
+                              <ul class="card-text credit_list bottom_right_cr">
+                                <li>-Accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch</li>
+                                <li>-Process transactions in up to 32 different currencies.</li>
+                                <li>-Integrate with popular payment gateways like Stripe, and BrainTree</li>
+                                <li>Select from a variety of different checkout options and experiences</li>
+                              </ul>
+                              <button type="button" class="btn btn-outline-light">Learn More</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
         </div>
         
 
