Fix scaling of cards

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <li>-Integrate with popular payment gateways like Stripe, and BrainTree</li>
                                 <li>Select from a variety of different checkout options and experiences</li>
                               </ul>
-                              <button type="button" class="btn btn-outline-light">Learn More</button>
+                              <button type="button" class="btn btn-outline-light">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
                             </div>
                           </div>
                         </div>
