Add heading and card to solutions section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="card mb-3 " id="credit_cont">
                         <div class="row g-0">
                           <div class="col-md-4 credit_card_right d-flex align-items-center justify-content-center">
-                            <div class="credit_img_cont"><img src="/img/credit-card-picture.png" class="img-fluid rounded-start" alt="..."></div>
+                            <div class="credit_img_cont"><img src="/img/credit-card-picture.png" class="img-fluid rounded-start" alt="cartoon of  aman holding a credit card"></div>
                           </div>
                           <div class="col-md-8" id="credit_card_right">
                             <div class="card-body">
@@ -72,6 +72,27 @@
                               <button type="button" class="btn btn-outline-light">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
                             </div>
                           </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="text-center fw-bold pb-5 heading_solutions">Solutions to Fit Your Business Needs</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5">
+                    <div class="card border-0">
+                        <div class="comp_bg_1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
+                            <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5"/>
+                          </svg>
+                        </div>
+                        <div class="card-body d-flex flex-column align-items-center">
+                            <h5 class="card-title">Email Dashboards</h5>
+                            <p class="card-text">Automate client responses, and keep track of any communication your team has with a client.</p>
+                            <button type="button" class="btn btn-outline-dark">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
                         </div>
                       </div>
                 </div>
