--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     </div>
     <div class="container focusgrid">
         <div class="row ">
-            <div class="col grid-a"><i class="bi bi-grid-1x2-fill"></i><p>Client Dashboard</p></div>
-            <div class="col grid-b"><i class="bi bi-person"></i><p>Employee Profiles</p></div>
-            <div class="col grid-c"><i class="bi bi-calendar-check"></i><p>Client Calendars</p></div>
+            <div class="col grid-a"><h5><i class="bi bi-grid-1x2-fill"></i></h5><p>Client Dashboard</p></div>
+            <div class="col grid-b"><h5><i class="bi bi-person"></h5></i><p>Employee Profiles</p></div>
+            <div class="col grid-c"><h5><i class="bi bi-calendar-check"></i></h5><p>Client Calendars</p></div>
         </div>
         <div class="row">
-            <div class="col grid-d"><i class="bi bi-bar-chart-line-fill"></i><p>Analytics</p></div>
-            <div class="col grid-e"><i class="bi bi-chat-fill"></i><p>Project Comments</p></div>
-            <div class="col grid-f"><i class="bi bi-folder2"></i><p>Project Folders</p></div>
+            <div class="col grid-d"><h5><i class="bi bi-bar-chart-line-fill dark-fill"></i></h5><p>Analytics</p></div>
+            <div class="col grid-e"><h5><i class="bi bi-chat-fill"></i></h5><p>Project Comments</p></div>
+            <div class="col grid-f"><h5><i class="bi bi-folder2 dark-fill"></i></h5><p>Project Folders</p></div>
         </div>
         <div class="row">
-            <div class="col grid-g"><i class="bi bi-clock"></i><p>Time Tracking</p></div>
-            <div class="col grid-h"><i class="bi bi-envelope"></i><p>Email</p></div>
-            <div class="col grid-i"><i class="bi bi-bell-fill"></i><p>Project Alerts</p></div>
+            <div class="col grid-g"><h5><i class="bi bi-clock"></i></h5><p>Time Tracking</p></div>
+            <div class="col grid-h"><h5><i class="bi bi-envelope"></i></h5><p>Email</p></div>
+            <div class="col grid-i"><h5><i class="bi bi-bell-fill"></i></h5><p>Project Alerts</p></div>
         </div>
         <!-- using placheholder for now. plan to flush out later -->
         <!-- <img src="./images/Header-Side.png" alt="" id="focusgridimg"> -->
