--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="focustext">
         <h1>Focus on</h1>
         <h1>Your Business</h1>
-        <h5>Let Us Handle Everything Else</h5>
+        <h4>Let Us Handle Everything Else</h4>
         <p>Subscription Billing, powered with revenue retention tools and a
             seamless customer exerience - without the technical hurdles.</p>
         <div class="focustextbuttons">
-            <button id="focussignup">Sign Up Free  >></button>
-            <button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button>
+            <a href="./extra_pages/sign_up.html" target="_blank"><button id="focussignup">Sign Up Free  >></button></a>
+            <a href="#" target="_blank"><button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button></a>
         </div>
-        <p>Already using <b>Double</b>Tap? <b>Sign In</b></p>
+        <p>Already using <b>Double</b>Tap? <a href="/extra_pages/sign_in.html" target="_blank"><b>Sign In</b></a></p>
         <div class="focusdetails">
             <p>Free 14 day trial</p>
             <div class="circle"></div>
