--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-<!-- Focus on your business section -->
+<!-- Start: Focus on your business section -->
 
 <div class="focus-container">
     <div class="focuscard">
@@ -25,7 +25,7 @@
             <a href="./extra_pages/sign_up.html" target="_blank"><button id="focussignup">Sign Up Free  >></button></a>
             <a href="#" target="_blank"><button id="focuschat"><i class="bi bi-chat-dots-fill"></i> Chat With Us</button></a>
         </div>
-        <p>Already using <b>Double</b>Tap? <a href="/extra_pages/sign_in.html" target="_blank"><b>Sign In</b></a></p>
+        <p>Already using <b>Double</b>Tap? <a href="./extra_pages/sign_in.html" target="_blank"><b>Sign In</b></a></p>
         <div class="focusdetails">
             <p>Free 14 day trial</p>
             <div class="circle"></div>
@@ -35,6 +35,8 @@
         </div>
         
     </div>
+<!-- Right sider graphics -->
+
     <div class="container focusgrid">
         <div class="row ">
             <div class="col grid-a"><h5><i class="bi bi-grid-1x2-fill"></i></h5><p>Client Dashboard</p></div>
@@ -58,7 +60,7 @@
 </div>
 </div>
 
-
+<!-- End: Focus on your business section -->
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
