Finish Solutions section and fix scaling issues

--- a/index.html
+++ b/index.html
@@ -81,21 +81,62 @@
                     <h3 class="text-center fw-bold pb-5 heading_solutions">Solutions to Fit Your Business Needs</h3>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-5">
-                    <div class="card border-0 d-flex flex-column align-items-center">
-                        <div class="comp_bg_1">
+            <div class="row space-between mt-3">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-5">
+                    <div class="card border-0 d-flex flex-column align-items-center scaling">
+                        <div class="solutions_bg_1">
                             <i class="bi bi-laptop"></i>
                         </div>
-                        <div class="card-body d-flex flex-column align-items-center">
-                            <h5 class="card-title">Email Dashboards</h5>
+                        <div class="card-body d-flex flex-column align-items-center sol_bus_card">
+                            <h5 class="card-title sol_bus_title">Email Dashboards</h5>
                             <p class="card-text text-center">Automate client responses, and keep track of any communication your team has with a client.</p>
                             <button type="button" class="btn btn-outline-dark">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
                         </div>
                       </div>
                 </div>
+                <div class="col-lg-5">
+                    <div class="card border-0 d-flex flex-column align-items-center scaling">
+                        <div class="solutions_bg_1">
+                            <i class="bi bi-check2-square"></i>
+                        </div>
+                        <div class="card-body d-flex flex-column align-items-center sol_bus_card">
+                            <h5 class="card-title sol_bus_title">Task Management</h5>
+                            <p class="card-text text-center">Automate client responses, and keep track of any communication your team has with a client.</p>
+                            <button type="button" class="btn btn-outline-dark">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-1"></div>
             </div>
-        </div>
+            <div class="row space-between mb-5 last-row">
+                <div class="col-1"></div>
+                <div class="col-lg-5">
+                    <div class="card border-0 d-flex flex-column align-items-center scaling">
+                        <div class="solutions_bg_1">
+                            <i class="bi bi-bar-chart-fill"></i>
+                        </div>
+                        <div class="card-body d-flex flex-column align-items-center sol_bus_card">
+                            <h5 class="card-title sol_bus_title">Analytics</h5>
+                            <p class="card-text text-center">Automate client responses, and keep track of any communication your team has with a client.</p>
+                            <button type="button" class="btn btn-outline-dark">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="card border-0 d-flex flex-column align-items-center scaling">
+                        <div class="solutions_bg_1">
+                            <i class="bi bi-calendar2-date"></i>
+                        </div>
+                        <div class="card-body d-flex flex-column align-items-center sol_bus_card">
+                            <h5 class="card-title sol_bus_title">Project Calendars</h5>
+                            <p class="card-text text-center">Automate client responses, and keep track of any communication your team has with a client.</p>
+                            <button type="button" class="btn btn-outline-dark">Learn More&nbsp;&nbsp;<i class="bi bi-caret-right"></i></button>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
         
 
             
