rounded buttons and fixed bottom links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="./Logo.png" alt="Logo" class="logo">
+                        <img src="./images/Logo.png" alt="Logo" class="logo">
                     </a>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
@@ -48,18 +48,36 @@
                     <h1 class="font-weight-bold">Try Double Tap Today!</h1>
                 </div>
                 <div>
-                    <h3>Let's get started</h3>
+                    <h6>Let's Get Started</h6>
                 </div>
                 <div>
-                    <button class="get-started-btn" type="Sign_in">Get Started</button>
-                    <button class="chat-with-us-btn" type="chat-with-us">Chat With Us!</button>
+                    <button class="get-started-btn" type="Sign_in">
+                        <div class="row">
+                            <div class="col-9 d-flex align-items-center">
+                                <span>Get Started!</span>
+                            </div>
+                            <div class="col-3 d-flex align-items-center justify-content-end">
+                                <img src="./images/right-arrows.png" alt="arrow-icon" class="img-fluid" style="width: 15px; height: 15px;">
+                            </div>
+                        </div>
+                    </button>
+                    <button class="btn btn-primary chat-with-us-btn" type="chat-with-us">
+                        <div class="row">
+                            <div class="col-3 d-flex align-items-center justify-content-end">
+                                <img src="./images/chat_bubble.png" alt="chat-icon" class="img-fluid" style="width: 25px; height: 25px;">
+                            </div>
+                            <div class="col-9 d-flex align-items-center">
+                                <span>Chat With Us!</span>
+                            </div>
+                        </div>
+                    </button>
                 </div>
                 <div>
-                    <a href="about:blank" target="_blank">Free 14 day trial</a>
-                    <span class="separator">|</span>
-                    <a href="about:blank" target="_blank">Manage Customers in Minutes</a>
-                    <span class="separator">|</span>
-                    <a href="about:blank" target="_blank">Cancel at anytime</a>
+                    <a href="about:blank" target="_blank" style="font-size: 12px;">Free 14 Day Trial</a>
+                    <img src="./images/white-circle.png" alt="separator_image" style="width: 10px; height: 10px;">
+                    <a href="about:blank" target="_blank" style="font-size: 12px;">Manage Customers in Minutes</a>
+                    <img src="./images/white-circle.png" alt="separator_image" style="width: 10px; height: 10px;">
+                    <a href="about:blank" target="_blank" style="font-size: 12px;">Cancel at Anytime</a>
                 </div>
             </div>
             
